--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,50 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Name
+      value: Linh N. Dang
+    - name: Email
+      value: linhnguyennhatdang@gmail.com
+    - name: URL
+      value: https://github.com/DangNhatLinh
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Bachelor of Science in Data Science
+      institution: Purdue University, West Lafayette, IN
+      year: 08.2024 - 05.2028
+      description: Data Science
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Data Engineer Intern
+      institution: FPT Software
+      year: 05.2025 - 08.2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Developed Python and PySpark-based ETL pipelines for ingesting, transforming, and validating data across multiple internal systems.
+        - Built early versions of automated ML workflows using tools such as Airflow, enabling reproducible pipelines and faster iteration on model experiments.
+    - title: Data Science Researcher
+      institution: BASF, West Lafayete, IN
+      year: 08.2024 - 12.2024
       description:
-        - Description 1.
-        - Description 2.
+        - Conducted data science research with BASF through Purdue’s Data Mine program, applying statistical modeling and ML to real industry datasets.
+        - Performed exploratory data analysis, feature selection, and predictive modeling on BASF datasets.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: <a href="https://github.com/DangNhatLinh/AutoRetrainML">AutoML Retraining Pipeline</a>
+      year: 2025
+      description: Built an automated Airflow pipeline for ETL, retraining, evaluation, and deployment, reducing manual ops and improving model reliability.
+    - title: <a href="https://github.com/DangNhatLinh/BrainTumorML">Brain Tumor Detection with Volumetric CNNs</a>
+      year: 2025
+      description: Developed a 3D CNN model to classify MRI brain scans and detect tumors using volumetric medical imaging data.
 
 - title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Machine Learning & Deep Learning
+    - Data Engineering & Big Data Systems
+    - Algorithmic Problem Solving
