--- a/_config.yml
+++ b/_config.yml
@@ -631,14 +631,10 @@ jekyll_get_json:
 
 jsonresume:
   - basics
-  - work
+  - experience
   - education
-  - publications
   - projects
-  - volunteer
-  - awards
   - certificates
   - skills
   - languages
   - interests
-  - references
